--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+yatube/static
+yatube/htmlcov
+__pycache__/
+*.py[cod]
+*$py.class
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
